test/ddc-spec/error/01-ErrorExp/52-RunCannotInfer/Main.ds

module Main where

foo x = run x
